--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -26,8 +26,8 @@
     <span>Имя блока</span>
 </div>
 ```
+<i>Модуль блока</i>
 ```CSS
-/* Модуль блока */
 .fld > span {
     padding-left: 20px;
     background: url(icon.png);
