Edit New Context paragraph

--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -64,7 +64,7 @@
 </p>
 <h3>Новые контексты<h3>
 <p>
-Использование модульного подхода позволяет нам лучше понять, где может появиться изменение контекста. К примеру, нужда в новом позиционировании контекста, скорее всего произойдет либо на уровне слоев, либо в самом корне модуля.
+Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне макета или в корне модуля.
 </p>
 <h3>Подклассовое модулирование</h3>
 <p>
