--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -1,5 +1,5 @@
 # Модульные правила
-Уже упомянутый в предыдущей секции Модуль, является отдельным компонентом страницы. Им может быть все, что угодно: меню, слайд-шоу, диалоговое окно, виджет и так далее. Это - основная часть страницы. Модули могут находиться как внутри слоев, так и внутри других модулей. Каждый модуль должен создаваться как отдельный компонент, не зависящий от других. Таким образом, страница получится более гибкой, в которой модули могут легко перемещаться в разные части страницы, не ломаясь или не ломая соседние компоненты.
+Как было упомянуто в предыдущей главе, Модуль является более обособленным компонентом страницы. Им может быть меню, слайдер, диалоговое окно, виджет и тому подобное. Модуль - основная часть страницы. Модули могут находиться как внутри слоев, так и внутри других модулей. Каждый модуль должен создаваться как отдельный компонент, не зависящий от других. Таким образом, страница получится более гибкой, в которой модули могут легко перемещаться в разные части страницы, не ломаясь или не ломая соседние компоненты.
 
 Описывая правила разметки для модуля, избегайте использования ID и селекторов по элементам. Используйте только имена классов. Скорее всего, модуль будет содержать в себе несколько других элементов, и хорошей идеей будет использование так называемых "потомковых" селекторов для их выделения. 
 
