--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -1,50 +1,50 @@
-# Модульные правила
-Как было упомянуто в предыдущей главе, Модуль является более обособленным компонентом страницы. Им может быть меню, слайдер, диалоговое окно, виджет и тому подобное. Модуль - основная часть страницы. Модули могут находиться как внутри слоев, так и внутри других модулей. Каждый модуль должен создаваться как отдельный компонент, не зависящий от других. Таким образом, страница получится более гибкой, в которой модули могут легко перемещаться в разные части страницы, не ломаясь или не ломая соседние компоненты.
+# Правила модулей
+Как было упомянуто в предыдущей главе, модуль является более обособленным компонентом страницы. Им может быть меню, слайдер, диалоговое окно, виджет и тому подобное. Модули — это основные составляющие страницы. Модули могут находиться как внутри макета, так и внутри других модулей. Каждый модуль должен создаваться как отдельный, не зависящий от других модулей компонент. Благодаря такому подходу страница будет более гибкой — модули можно будет легко перемещать в разные части макета, при этом не ломая сам макет.
 
-Описывая правила разметки для модуля, избегайте использования ID и селекторов по элементам. Используйте только имена классов. Скорее всего, модуль будет содержать в себе несколько других элементов, и хорошей идеей будет использование так называемых "потомковых" селекторов для их выделения. 
+При описании правил модуля избегайте использования селекторов по идентификаторам и именам тегов. Используйте только селекторы по классу. Скорее всего, модуль будет содержать в себе какое-то количество элементов, и было бы неплохо использовать селектор по потомкам для стилизации этих элементов. 
 
 ```css
 /* Пример модуля */
 .module > h2 {
-    padding: 5px;
+  padding: 5px;
 }
 
 .module span {
-    padding: 5px;
+  padding: 5px;
 }
 ```
 
 ## Избегайте селекторов по элементам
-Используйте потомковые селекторы вместе с селекторами по элементам, если вторые являются легко предсказуемыми. Использовать .module span хорошо, если использование span можно предугадать, и он будет каждый раз размечен одинаково внутри этого модуля.
+Используйте селекторы по потомкам вместе с селекторами по элементам, если вторые являются легко предсказуемыми. Использовать `.module span` хорошо, если использование `span` будет предсказуемо и если модуль всегда будет размечен одинаково.
 
 ```html
-<!-- Разметка вложенных элементов -->
+<!-- Стилизация с предсказуемым элементом-->
 <div class="fld">
-    <span>Имя блока</span>
+  <span>Имя папки</span>
 </div>
 ```
 
 ```css
-/* Модуль блока */
+/* Модуль Folder */
 .fld > span {
-    padding-left: 20px;
-    background: url(icon.png);
+  padding-left: 20px;
+  background: url(icon.png);
 }
 ```
 
-Проблемой является то, что с ростом проекта нам понадобится расширять функционал компонента, и тем сложнее будет использовать потомковые селекторы. 
+Проблемой является то, что чем больше функционала вы будете добавлять в ваш модуль, тем больше ограничений появится из-за использования селектора по элементу.
 
 ```html
 <!-- Разметка вложенных элементов -->
 <div class="fld">
-    <span>Имя блока</span> 
-    <span>(еще 32 элемента)</span>
+    <span>Имя папки</span> 
+    <span>(32 элемента)</span>
 </div>
 ```
 
 Теперь мы оказались в неприятном положении. Мы не хотим, чтобы иконка появлялась на обоих элементах внутри нашего модуля. И это приводит нас к следующей части моего повествования: 
 
-Используйте селекторы, которые несут в себе смысл. Span или div ничего не говорят нам о самих элементах. Класс, определенный на элементе, может рассказать нам многое.
+*Используйте селекторы, которые несут в себе смысл*. Сами по себе `Span` или `div` ничего не значат. Класс, заданный элементу, может рассказать нам многое.
 
 ```html
 <!-- Разметка вложенных элементов -->
@@ -54,9 +54,9 @@
 </div>
 ```
 
-Добавив элементам классы, мы дали им смысл и избавились от какой-либо неясности при их разметке.
+Благодаря добавлению классов мы улучшили понимание смысла этих элементов и избавились от какой-либо неясности при их стилизации.
 
-Если вы все же хотите использовать селектор по элементу, он должен использоваться в пределах одного уровня с классовым селектором. Дргими словами, использование потомковых селекторов крайне ситуативно. С другой стороны, вы должны быть полностью уверены, что один элемент не будет спутан с другим. Такие элементы, как span или div, скорее всего только создадут вам дополнительные проблемы. Однако элементы, вроде заголовков, скорее всего появятся лишь один раз внутри одного блока, и использование селекторов по элементу на них не приведет ни к каким конфликтам.
+**Если вы все же хотите использовать селектор по элементу, он должен использоваться в пределах одного уровня с классовым селектором. Дргими словами, использование потомковых селекторов крайне ситуативно. С другой стороны, вы должны быть полностью уверены, что один элемент не будет спутан с другим. Такие элементы, как span или div, скорее всего только создадут вам дополнительные проблемы. Однако элементы, вроде заголовков, скорее всего появятся лишь один раз внутри одного блока, и использование селекторов по элементу на них не приведет ни к каким конфликтам.** — требует вычитки
 
 ## Новые контексты
 Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне макета или в корне модуля.
