Fixes in sixth chapter

--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -37,8 +37,8 @@
 ```html
 <!-- Разметка вложенных элементов -->
 <div class="fld">
-    <span>Имя папки</span> 
-    <span>(32 элемента)</span>
+  <span>Имя папки</span> 
+  <span>(32 элемента)</span>
 </div>
 ```
 
@@ -49,8 +49,8 @@
 ```html
 <!-- Разметка вложенных элементов -->
 <div class="fld">
-    <span class="fld-name">Имя блока</span> 
-    <span class="fld-items">(еще 32 элемента)</span>
+  <span class="fld-name">Имя блока</span> 
+  <span class="fld-items">(еще 32 элемента)</span>
 </div>
 ```
 
@@ -61,54 +61,55 @@
 ## Новые контексты
 Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне макета или в корне модуля.
 
-## Подклассовое модулирование
-Когда мы имеем одинаковые модули в разных секциях, первым порывом может являться использование элемента родителя для разметки этого модуля по другому.
+## Использование подклассов
+Когда у нас есть один и тот же модуль в разных секциях, первой идеей может быть использование родительского элемента для стилизации этого модуля.
 
 ```css
-/* Подклассы */
+/* Вложенность модулей */
 .pod { 
-    width: 100%; 
+  width: 100%; 
 }
 .pod input[type=text] { 
-    width: 50%; 
+  width: 50%; 
 }
 #sidebar .pod input[type=text] { 
-    width: 100%; 
+  width: 100%; 
 }
 ```
 
-Проблемой данного подхода является то, что мы легко можем столкнуться со спецефическими проблемами, из-за которых нам придется использовать еще больше селекторов или даже скатиться до использования !important.
+Проблемой данного подхода является то, что вы можете столкнуться с необходимостью увеличения специфичности, вследствие чего придётся использовать ещё больше селекторов или даже `!important`.
 
-Говоря о приведенном выше примере, у нас есть поля ввода с различной шириной. В основной части сайта поле ввода имеет подпись рядом с ним, и должно занимать лишь половину ширины всего родительского элемента. Однако, в боковой панели поле ввода было бы слишком маленьким, так что мы увеличим его ширину до 100%, а подпись сделаем сверху. Пока что все идет хорошо. Теперь нам нужно добавить новый элемент на нашу страницу. Большинство его разметки совпадает с блоком .pod, так что мы используем этот класс еще раз. Однако, новый элемент особенный, и имеет ограниченную ширину, в какой части страницы бы он не находился. 
+Рассмотрим наш предыдущий пример. У нас есть поля ввода с различной шириной. В основной части сайта поле ввода имеет рядом с собой подпись, и оно должно занимать половину доступной ширины. Однако в боковой панели поле ввода было бы слишком маленьким, так что мы увеличиваем его ширину до 100%, а подпись размещаем сверху. Всё выглядит хорошо. Теперь нам нужно добавить новый элемент на нашу страницу. Его стили во многом совпадают со стилями `.pod`, так что мы используем этот класс ещё раз. Однако новый элемент особенный, и имеет ограниченную ширину в любом месте сайта. В таком случае нашему полю ввода мы зададим ширину `180px`.
 
 ```css
 /* Боремся со специфичностью */
 .pod { 
-    width: 100%; 
+  width: 100%; 
 } 
 .pod input[type=text] { 
-    width: 50%; 
+  width: 50%; 
 }
 #sidebar .pod input[type=text] { 
-    width: 100%; 
+  width: 100%; 
 }
 
 .pod-callout { 
-    width: 200px; 
+  width: 200px; 
 }
 #sidebar .pod-callout input[type=text],
 .pod-callout input[type=text] { 
-    width: 180px; 
+  width: 180px; 
 }
 ```
 
-Нам приходится использовать два селектора, чтобы наши изменения были в силе и внутри боковой панели.
+Нам приходится удвоить количество селекторов, чтобы перекрыть специфичность `#sidebar`.
 
-Что нам следует сделать вместо этого, так это вспомнить, что наш ограниченный блок является подклассом .pod и соответствующе его разметить.
+Вместо этого нам следовало бы осознать, что ограниченная ширина в сайдбаре может быть реализована с помощью подкласса.
 
 ```css
-.pod { 
-    width: 100%; 
+/* Боремся со специфичностью */
+.pod {
+  width: 100%; 
 } 
 .pod input[type=text] { 
     width: 50%; 
@@ -125,7 +126,7 @@
 }
 ```
 
-С применением подклассов, как основной, так и вторичный класс будут применены к HTML элементу.
+При использовании подклассов модулю следует присваивать как основной класс, так и подкласс.
 
 ```html
 <!-- Подклассы в HTML -->
@@ -133,24 +134,22 @@
 <div class="pod pod-callout">...</div> 
 ```
 
-Старайтесь избегать условной разметки элемента. Если вы изменяете внешний вид модуля где-то в другом месте на странице, используйте подклассы вместо сложных условий и вложений.
+Старайтесь избегать стилизации, зависящей от положения элемента на странице. Если вам требуется изменить внешний вид модуля, расположенного в определённом месте, используйте подкласс.
 
-Если вас не беспокоит совместимость с IE6, вы можете использовать селекторы так,
+Если вы хотите избавиться от проблем со специфичностью и при этом вас не беспокоит совместимость с IE6, вы можете использовать два класса в качестве одного селектора:
 
 ```css
 /* Подклассы */
 .pod.pod-callout { }
 ```
 
-выбирая именно интересующий нас элемент.
-
 ```html
-<!-- Наш HTML -->
+<!-- В HTML -->
 <div class="pod pod-callout"> ... </div>
 ```
 
-Однако будьте осторожны, если вы используйте несколько файлов, которые загружаются по очереди. К примеру, на почте Yahoo!, у нас имеется код, загружающийся из разных мест. Были как основные стили для кнопок, так и специальный набор кнопок для экрана написания нового письма. Однако, при нажатии на "Добавить контакт", загружался дополнительный компонент от совсем другого нашего продукта: Адресной книги. (Да, адрессная книга - другой продукт внутри Yahoo!.) Та, в свою очередь, загружала свои собственные стили кнопок, тем самым изменяя стили подклассовых кнопок на основной странице.
+Вам следует быть осторожным из-за порядка загрузки ресурсов на странице. К примеру, в Yahoo! Mail мы имеем код, загружающийся из разных мест. У нас были как основные стили для кнопок, так и специальный набор стилей для страницы написания письма. Однако при нажатии на «Добавить контакт» загружался дополнительный компонент из другого продукта — адресной книги. (Да, адрессная книга - другой продукт внутри Yahoo!). Та, в свою очередь, загружала свои собственные стили кнопок, тем самым перезаписывая наши стили, применённые с помощью подклассов.
 
-Если вы загружаете файлы из различных мест, будьте готовы к проблемам спецификации.
+Если порядок загрузки ресурсов в вашем проекте важен, то будьте готовы столкнуться с проблемами, связанными со специфичностью.
 
-Несмотря на то, что использование ID может быть использованно для разметки именно интересующего нас модуля, подклассы позволяют модулю легко перемещаться между секциями всего сайта и избавляют вас он лишних проблем со спецификацией.
+Несмотря на то, что более специфичные части вёрстки с заданным идентификатором могут быть использованы для стилизации модулей, отказ от этого в пользу подклассов позволит ещё легче перемещать модуль в разные части сайта, избегая проблем со специфичностью. 
