Заменил «макет» на «вёрстка»

--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -1,5 +1,5 @@
 # Правила модулей
-Как было упомянуто в предыдущей главе, модуль является более обособленным компонентом страницы. Им может быть меню, слайдер, диалоговое окно, виджет и тому подобное. Модули — это основные составляющие страницы. Модули могут находиться как внутри макета, так и внутри других модулей. Каждый модуль должен создаваться как отдельный, не зависящий от других модулей компонент. Благодаря такому подходу страница будет более гибкой — модули можно будет легко перемещать в разные части макета, при этом не ломая сам макет.
+Как было упомянуто в предыдущей главе, модуль является более обособленным компонентом страницы. Им может быть меню, слайдер, диалоговое окно, виджет и тому подобное. Модули — это основные составляющие страницы. Модули могут находиться как внутри вёрстки, так и внутри других модулей. Каждый модуль должен создаваться как отдельный, не зависящий от других модулей компонент. Благодаря такому подходу страница будет более гибкой — модули можно будет легко перемещать в разные части вёрскти, при этом не ломая саму вёрстку.
 
 При описании правил модуля избегайте использования селекторов по идентификаторам и именам тегов. Используйте только селекторы по классу. Скорее всего, модуль будет содержать в себе какое-то количество элементов, и было бы неплохо использовать селектор по потомкам для стилизации этих элементов. 
 
@@ -59,7 +59,7 @@
 **Если вы все же хотите использовать селектор по элементу, он должен использоваться в пределах одного уровня с классовым селектором. Дргими словами, использование потомковых селекторов крайне ситуативно. С другой стороны, вы должны быть полностью уверены, что один элемент не будет спутан с другим. Такие элементы, как span или div, скорее всего только создадут вам дополнительные проблемы. Однако элементы, вроде заголовков, скорее всего появятся лишь один раз внутри одного блока, и использование селекторов по элементу на них не приведет ни к каким конфликтам.** — требует вычитки
 
 ## Новые контексты
-Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне макета или в корне модуля.
+Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне вёрстки или в корне модуля.
 
 ## Использование подклассов
 Когда у нас есть один и тот же модуль в разных секциях, первой идеей может быть использование родительского элемента для стилизации этого модуля.
