--- a/2. Core/7. State rules.md
+++ b/2. Core/7. State rules.md
@@ -1,6 +1,5 @@
-# Правила состояния #
-
-Правило состояния - это что-то, что расширяет и переопределяет все остальные правила. Например, секции "аккордеона" могут быть в свернутом и развернутом состояниях. Сообщение может быть об успешно завершенной операции или об ошибке.
+# Правила состояния
+Правила состояния - это что-то, что расширяет и переопределяет все остальные правила. Например, секция «аккордеона» может быть в свёрнутом и развернутом состояниях. Сообщение может быть об успешно завершенной операции или об ошибке.
 
 Обычно правила состояния применяются к тем же элементам, к которым применяются правила разметки или базовые модульные классы.
 
