--- a/2. Core/3. Categorizing CSS Rules.md
+++ b/2. Core/3. Categorizing CSS Rules.md
@@ -8,7 +8,7 @@
 В SMACSS есть пять категорий:
 
 1. База
-2. Макет
+2. Вёрстка
 3. Модуль
 4. Состояние
 5. Тема
@@ -30,16 +30,16 @@ a { color: #039; }
 a:hover { color: #03C; }
 ```
 
-**Правила макета** разделяют страницу на секции. Макеты объединяют определённое количество модулей.
+**Правила вёрстки** разделяют страницу на секции. Вёрстка объединяет определённое количество модулей.
 
-**Правила состояния** описывают то, как наши модули или макеты должны выглядеть в различных состояниях. Скрыты они или отображены? Активны или неактивны? Эти правила также описывают то, как модули или макеты выглядят на разных экранах — больших и маленьких. Кроме того, они описывают то, как модули могут выглядеть в разных местах, таких как главная или внутренняя страница.
+**Правила состояния** описывают то, как наши модули или вёрстка должны выглядеть в различных состояниях. Скрыты они или отображены? Активны или неактивны? Эти правила также описывают то, как модули или вёрстка выглядят на разных экранах — больших и маленьких. Кроме того, они описывают то, как модули могут выглядеть в разных местах, таких как главная или внутренняя страница.
 
-**Правила темы** похожи на правила состояния тем, что они описывают то, как модули или макеты могут выглядеть. Большинство сайтов не требует темизации, но хорошо иметь её ввиду.
+**Правила темы** похожи на правила состояния тем, что они описывают то, как модули или вёрстка могут выглядеть. Большинство сайтов не требует темизации, но хорошо иметь её ввиду.
 
 ## Соглашение по именованию
 В связи с разделением правил на пять категорий наличие определённого соглашения по именованию поможет сразу понять, к какой из категорий относится определённый стиль и какова его роль в пределах всей страницы. При работе над большими проектами предпочтительно разделить стили на множетсво файлов. Поэтому наличие правил именования также сделает понятнее то, к какому файлу относится определённый стиль.
 
-Мне нравится использовать префиксы для разделения между правилами Макета, Состояния и Модуля. Для Макета я использую `l-`, но `layout-` будет работать так же хорошо. Использование префиксов вроде `grid-` также вносит достаточно ясности при отделении стилей макета от других стилей. Для правил состояния я использю `is-`, например `is-hidden` или `is-collapsed`. Это помогает создавать весьма читаемые и понятные стили.
+Мне нравится использовать префиксы для разделения между правилами Вёрстки, Состояния и Модуля. Для вёрстки я использую `l-`, но `layout-` будет работать так же хорошо. Использование префиксов вроде `grid-` также вносит достаточно ясности при отделении стилей вёрстки от других стилей. Для правил состояния я использю `is-`, например `is-hidden` или `is-collapsed`. Это помогает создавать весьма читаемые и понятные стили.
 
 Модули являются основной частью любого проекта. В связи с этим добавление префикса вроде `.module-` к каждому из модулей было бы излишне многословным. Поэтому модули не используют префиксов, а имеют лишь своё собственное имя.
 
