Update 6. Module rules.md
Исправил параграф, который требовал вычитки. Постарался сделать его более читаемым

--- a/2. Core/6. Module rules.md
+++ b/2. Core/6. Module rules.md
@@ -56,7 +56,7 @@
 
 Благодаря добавлению классов мы улучшили понимание смысла этих элементов и избавились от какой-либо неясности при их стилизации.
 
-**Если вы все же хотите использовать селектор по элементу, он должен использоваться в пределах одного уровня с классовым селектором. Дргими словами, использование потомковых селекторов крайне ситуативно. С другой стороны, вы должны быть полностью уверены, что один элемент не будет спутан с другим. Такие элементы, как span или div, скорее всего только создадут вам дополнительные проблемы. Однако элементы, вроде заголовков, скорее всего появятся лишь один раз внутри одного блока, и использование селекторов по элементу на них не приведет ни к каким конфликтам.** — требует вычитки
+Запомните, что использование селекторов по элементу крайне ситуативно. Вы должны быть полностью уверены, что один элемент не будет спутан с другим. Span или div только создадут вам дополнительные проблемы. Однако элементы вроде заголовков, скорее всего, появятся внутри одного блока лишь один раз, и использование селекторов по элементу на них не приведет ни к каким конфликтам.
 
 ## Новые контексты
 Использование модульного подхода также позволяет нам лучше понять, где, скорее всего, произойдет изменение контекста. Потребность в новом позиционировании контекста, к примеру, может произойти на любом уровне вёрстки или в корне модуля.
