--- a/2. Core/7. State rules.md
+++ b/2. Core/7. State rules.md
@@ -3,59 +3,59 @@
 
 Обычно правила состояния применяются к тем же элементам, к которым применяются правила разметки или базовые модульные классы.
 
-**Состояние, примененное к элементу:**
 
-    <div id="header" class="is-collapsed">
-        <form>
-            <div class="msg is-error">
-                There is an error!
-            </div>
-            <label for="searchbox" class="is-hidden">Search</label>
-            <input type="search" id="searchbox">
-        </form>
+```html
+/* Состояние, применённое к элементу */
+<div id="header" class="is-collapsed">
+  <form>
+    <div class="msg is-error">
+      There is an error!
     </div>
+    <label for="searchbox" class="is-hidden">Search</label>
+    <input type="search" id="searchbox">
+  </form>
+</div>
+```
     
-У заголовка есть только ID. Из этого можно заключить, что все стили, примененные к этому элементу, сделаны только для разметки, и что `is-collapsed` отвечает за свернутое состояние. Можно предположить, что без этого правила элемент по умолчанию развернут.
+У заголовка есть только ID. Из этого можно сделать вывод, что все стили (если они есть), примененные к этому элементу, относятся к вёрстке и что `is-collapsed` отвечает за свёрнутое состояние. Можно предположить, что без этого класса состояния элемент по умолчанию развёрнут.
 
-Модуль `msg` достаточно простой и содержит состояние ошибки. Можно предположить, что в другом случае у элемента может быть состояние успешного завершения.
+Модуль `msg` достаточно прост, к нему применено состояние «ошибка». Можно предположить, что к этому модулю также возможно применение состояния успешного завершения.
 
-И наконец, у `label` есть состояние `hidden`, чтобы сделать элемент невидимым для взгляда, но оставить его видимым для парсеров. В этом случае мы применяем состояние к базовому элементу и не переопределяем стилей разметки или модуля.
+Наконец, у `label` есть состояние `hidden`, позволяющее скрыть от нас элемент, но оставить его видимым для парсеров. В этом случае мы применяем состояние к элементу и не переопределяем стилей вёрстки или модуля.
 
-### А может быть это всего лишь модуль? ###
+## А может быть это всего лишь модуль?
+Есть достаточно много сходств между подклассом модуля и правилом состояния. Они оба изменяют нынешний вид элемента. Однако, они различаются в двух ключевых моментах:
 
-Есть достаточно сходств между подклассовым модулем и правилом состояния. Они оба изменяют нынешний вид элемента. Однако, они различаются в двух ключевых моментах:
+1. Правила состояния могут применяться к вёрстке или модулям.
+2. Правила состояния определяют зависимость от JavaScript.
 
-1. Правила состояния могут применяться к правилам разметки или модульным правилам.
-2. Правила состояния показывают, что есть JavaScript зависимость.
+Второй пункт говорит об основном отличии. Подклассовые стили применяются к элементу в момент рендеринга и больше никогда не меняются. А правила состояния применяются для определения состояния элемента в конкретный момент времени.
 
-Второй пункт говорит об основном отличии. Подклассовые стили применяются к элементу в момент рендеринга и больше никогда не меняются. С другой стороны, правила состояния применяются, чтобы показать изменения в состоянии элементов, не перезагружая страницы. 
-
-Например, нажатие на вкладку активирует её. Поэтому классы `is-active` и `ia-tab-active` применимы здесь. Нажатие на кнопку закрытия диалогового окна закроет это окно. Поэтому класс `is-hidden` здесь тоже применим.
+Например, нажатие на вкладку активирует её. Поэтому классы `is-active` или `is-tab-active` применимы в этом случае. Нажатие на кнопку закрытия диалогового окна скроет это окно. Поэтому класс `is-hidden` также применим.
  
-## Использование !important ##
+## Использование !important
+Состояния должны быть самостоятельным. Обычно они состоят из одноклассового селектора.
 
-Состояния стоит делать независимо от остальных стилей и обычно они состоят из одного селектора класса.
+Посколько состояние, скорее всего, будет переопределять стили более сложных наборов правил, использование `!important` разрешено, и даже, осмелюсь сказать, рекомендуется. (Раньше я говорил, что `!important` никогда не используется, но в сложных системах это может быть необходимо.) Скорее всего, вам не придётся применять к элементу два или более состояния, так что проблемы специфичности могут вас не беспокоить.
 
-Посколько состояние, скорее всего, будет переопределять стили более сложных блоков правил, использование `!important` разрешено, и даже, осмелюсь сказать, рекомендуется. (Раньше я говорил, что `!important` никогда не используется, но в сложных системах он может быть необходимостью.) Обычно вам не будет нужно применять два состояния одновременно к одному элементу, поэтому конфликты между правилами с `!important` должны быть редкостью.
+И всё же будьте осторожны. Отложите использование `!important` до того момента, когда оно действительно станет необходимо (вы поймёте почему, когда увидите следующий пример). И помните — следует избегать использования `!important` с другими типами правил, оно применим только к состояниям.
 
-И всё же, будьте осторожны. Оставьте использование `!important` до момента когда он вам совершенно действительно необходим (и вы увидите, почему, в следующем примере). И помните, нужно избегать использования `!important` с другими типами правил, он применим только к состояниям.
+## Использование правил состояния вместе с модулями
+К сожалению, правило состояния не может использовать наследование, чтобы применить стили к другому элементу. Бывает, что состояние каждого модуля уникально, вследствие чего оно требует уникальной стилизации.
 
-## Использование правил состояния вместе с модулями ##
+В случае, если состояние сделано для специального модуля, в имя класса этого состояния следует включить имя модуля. Кроме того, стили данного состояния стоит расположить вместе со стилями модуля, а не со стилями глобальных состояний.
 
-К сожалению, состояние не может всегда полагаться на наследование, чтобы применить стили в нужном месте. Бывает, что стилизация каждого модуля уникальна и каждый из них требует отдельных стилей состояния.
+```css
+/* Правила состояния для модулей: */
+.tab {
+  background-color: purple;
+  color: white;
+}
 
-В случае, если состояние сделано специально для модуля, в имя класса состояния стоит включить имя модуля. Помимо этого, стили состояния стоит расположить со стилями модуля, а не с остальными стилями состояния.
-
-**Правила состояния для модулей:**
-
-    .tab {
-        background-color: purple;
-        color: white;
-    }
+.is-tab-active {
+  background-color: white;
+  color: black;
+}
+```
     
-    .is-tab-active {
-        background-color: white;
-        color: black;
-    }
-    
-Если вы хотите ускорить загрузку CSS, правила состояния должны быть частью основы и глобальных стилей и включены при загрузке страницы. Стили состояния определенного модуля не нужно подгружать до того, как стили самого модуля загружены.
+Если вы загружаете CSS по мере необходимости, а не сразу, то основные состояния должны быть включены в базовые и глобальные стили, загружающиеся при открытии страницы. Стили для отдельного модуля не требуется загружать до тех пор, пока не будет загружен сам модуль.
