Finish tenth chapter

--- a/3. Aspects of SMACSS/10. Depth of Applicability.md
+++ b/3. Aspects of SMACSS/10. Depth of Applicability.md
@@ -62,4 +62,56 @@ HTML похож на древовидную структуру из родите
 } 
 ```
 
-Теперь `pod` — это контейнер, который всё ещё зависит от определённой структуры разметки, но зато мы добились гораздо меньшей вложенности, чем была изначально. Компромисс заключается в том, что нам придётся несколько раз повторять класс `.pod` в нашей разметке.
+Теперь `pod` — это контейнер, который всё ещё зависит от определённой структуры разметки, но зато мы добились гораздо меньшей вложенности, чем была изначально. Компромисс заключается в том, что нам придётся несколько раз повторять класс `.pod` в нашей разметке, тогда как раньше мы имели лишь два элемента с идентификаторами. Конечно, мы хотим избежать возвращения в те дни, когда нам приходилось делать глупые вещи вроде добавления класса к каждому абзацу.
+
+Преимущество использования такой маленькой глубины применения также заключается в том, что мы можем легко конвертировать эти модули в шаблоны для динамического контента. Например, в Yahoo! мы использовали шаблонизатор Mustache для большинства наших нужд. Ниже представлен пример того, как мы можем настроить наш шаблон:
+
+```html
+<!-- Пример Mustache-шаблона -->
+<div class="pod">
+  <h3>{{heading}}</h3>
+  <ul>
+    {{#items}}
+    <li>{{item}}</li>
+    {{/items}}
+  </ul>
+</div> 
+```
+
+Мы пытаемся найти баланс между обслуживанием, производительностью и читабельностью. Слишком глубокая вложенность может привести к меньшему количеству классов в вашей разметке, но это увеличивает затраты на обслуживание и ухудшает читабельность. Также вам не нужно добавлять классы ко всему подряд. Добавление классов к `h3` или `ul` в данном примере было бы излишеством, если бы нам не требовалась ещё более гибкая система.
+
+Рассмотрим последний пример ещё глубже. Этот шаблон проектирования является довольно распространённым. Это контейнер с заголовком и содержимым. (Иногда в него также будет входить футер). В конкретно этом примере внутри контейнера располагается `ul`, но это также может быть и `ol` или `div`.
+
+Ещё раз, мы можем дублировать наши правила для каждой вариации.
+
+```css
+/* Дублирование правил */
+.pod > ul, .pod > ol, .pod > div {
+  margin-bottom: 5px; 
+} 
+```
+
+В качестве альтернативы мы можем просто сделать общий класс для содержимого контейнера:
+
+```css
+/* Упрощение с помощью класса */
+.pod-body {
+  margin-bottom: 5px; 
+} 
+```
+
+При использовании модульного подхода нам даже не потребуется указывать класс `.pod`. Мы можем визуально определить, что `.pod-body` связан с модулем `pod`, и с точки зрения кода это будет прекрасно работать.
+
+```html
+/* Пример Mustache-шаблона */
+<div class="pod">
+  <h3>{{heading}}</h3>
+  <ul class="pod-body">
+    {{#items}}
+    <li>{{item}}</li>
+    {{/items}}
+  </ul>
+</div> 
+```
+
+В результате этого небольшого изменения мы смогли снизить глубину применения до наименьшего значения. Одиночный селектор также означает то, что мы избавляемся от потенциальных проблем со специфичностью. В общем, это беспроигрышный вариант.
