finish fifth chapter

--- a/2. Core/5. Layout Rules.md
+++ b/2. Core/5. Layout Rules.md
@@ -134,3 +134,44 @@ div#featured li {
 1. На странице будет только один раздел «Featured»
 2. Элементы списка выравниваются по левому краю
 3. Элементы списка имеют высоту в `100px`
+
+Эти допущения могут быть вполне обоснованными. Это классический пример небольшого сайта, который так и останется с такой структурой: вряд ли он будет меняться и становиться сложнее. Более крупные сайты с большей вероятностью будут меняться, а значит с большей вероятностью придётся провести рефакторинг и переработку такого кода.
+
+Вспомним предыдущий пример — в нём определённо есть что улучшить. Селектор по идентификатору не требует уточнения с помощью добавления тега `div`. Кроме того, так как список является прямым потомком `div`, можно использовать дочерний селектор (`>`).
+
+Давайте посмотрим, как мы можем переработать код, чтобы добиться большей гибкости.
+
+Всё, что нас будет беспокоить со стороны вёрстки — это положение блоков друг относительно друга. Нас не должен заботить ни дизайн модулей, ни контекст, в котором они находятся.
+
+```css
+/* Модуль сетки, примененный к OL или UL */
+
+.l-grid {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.l-grid > li {
+  display: inline-block;
+  margin: 0 0 10px 10px; 
+    
+  /* IE7-хак для имитации inline-block*/
+  *display: inline;
+  *zoom: 1;
+}
+```
+
+Какие же проблемы мы решили, применив такой подход, и какие проблемы мы создали? (Крайне редко какой-либо подход решает 100% задачи).
+
+1. Класс сетки теперь может быть применён к любому блоку для создания float-подобной вёрстки.
+2. Мы уменьшили *глубину применимости* до 1 (подробнее об этом в главе «Глубина применимости»)
+3. Мы уменьшили специфичность селекторов
+4. Требования к высоте были убраны. Теперь отдельная строка будет иметь высоту самого высокого элемента в ней.
+
+С другой стороны, как мы ухудшили ситуацию?
+
+1. Используя дочерний селектор, мы отказываемся от поддержки IE6 (но мы можем обойти эту проблему, ограничив использование дочернего селектора).
+2. Размер и сложность CSS-файла увеличились.
+
+Увеличение CSS-файла — спорный вопрос, но он незначителен. Теперь у нас есть универсальный для использования модуль и мы может применять его повсеместно, не дублируя код. Увеличение сложности также не имеет большого значения. Нам уже приходилось верстать под устаревшие браузеры и использовать хаки, которые, вероятно, у кого-то вызывали недовольство. Однако, селекторы не так сложны, что позволяет нам расширить область применения такой верстки, всё ещё избавляясь от влияния специфичности.
