Finish eleventh chapter

--- a/3. Aspects of SMACSS/11. Selector Performance.md
+++ b/3. Aspects of SMACSS/11. Selector Performance.md
@@ -45,3 +45,16 @@
 * Правила, применяющие `:hover` не к ссылкам, например `div#content:hover`
 
 Из этих рекомендаций можно сделать вывод о том, что обработка более чем одного элемента для применения стилей является неэффективной. Это значит, что вы можете использовать только простой одиночный селектор по классу, идентификатору, элементу или атрибуту. Если беспрекословно выполнять эти рекомендации, то мы вернёмся назад в дни, когда присваивание класса к каждому абзацу текста было нормой (`<p class="bodytext"></p>`). (И если вы посмотрите на CSS продуктов вроде поиска или почты Google, вы поймёте, что они следуют этим рекомендациям).
+
+##
+Я верю, что большинство из нас будут немного более практичными и сумеют сохранить баланс между добавлением классов/идентификаторов и использованием многоуровневых селекторов, крепко связывающих HTML и CSS.
+
+Я следую трём простым правилам, помогающим ограничить количество обрабатываемых браузером элементов:
+
+1. Используйте дочерние селекторы
+2. Ограничьте использование селекторов по имени тега для основных элементов
+3. В конце селектора используйте имя класса
+
+Например, `.module h3` может быть неплохим решением только в том случае, когда на странице имеется лишь небольшое количество заголовков `h3`. Как глубоко эти заголовки расположены в DOM? Возможно они имеют четыре уровня вложенности (`html > body > #content > h3`), или же они имеют десять уровней вложенности (`html > body > #content > div > div > … > h3`)? Могу ли я ограничить обработку DOM с помощью дочерних селекторов? Если я напишу `.module > h3` (прости, IE6), то я буду знать, что для стилизации двенадцати заголовков браузеру потребуется обработать их 24 раза. Если же я напишу `.module div`, и при этом на странице будет 900 `div`'ов (например, я открыл свою почтовый ящик Yahoo!, а в нём 903 `div`'а) — в таком случае браузеру придётся обрабатывать страницу намного дольше. Простая разметка `<div><div><div></div></div></div>` (3 уровня вложенности) будет обработана за 6 раз. Это факториал. Четыре уровня вложенности будут обработаны за 24 раза. Пять уровней вложенности обрабатываются за 120 раз.
+
+Подытожим всё вышесказанное. Даже простые оптимизации могут оказаться излишеством. Стив Саудерс (он много работает над тестированием производительности) исследовал влияние CSS-селекторов на производительность и определил, что разница между лучшим и худшим результатом была всего лишь в 50 миллисекунд. Другими словами, учитывайте производительность селекторов, но не тратьте на оптимизацию слишком много времени.
