Два исправления в конце текста
Опечатка
Использование местоимения в правильной форме

--- a/2. Core/3. Categorizing CSS Rules.md
+++ b/2. Core/3. Categorizing CSS Rules.md
@@ -66,4 +66,4 @@ a:hover { color: #03C; }
 
 Модули, которые являются вариациями другого модуля, тоже должны использовать имя базового модуля в качестве префикса. Такое именование подробнее описано в главе «Правила модуля».
 
-Эти соглашения по именованию будут использоваться на протяжении всей этой книги. Помните, что вы не обязаны жёстко следовать этим правилам, как и многим другим вещам, которые я изложил в этой книге. Глваное — имейте определённые соглашения, задокументируйте их и придерживайтесь им.
+Эти соглашения по именованию будут использоваться на протяжении всей этой книги. Помните, что вы не обязаны жёстко следовать этим правилам, как и многим другим вещам, которые я изложил в этой книге. Главное — имейте определённые соглашения, задокументируйте их и придерживайтесь их.
